# purple-terminal-agent

./: Dockerfile  LICENSE  README.md  agent.py  amber-manifest.json5  gitignore  memory.py  planner.py  pyproject.toml  rag.py  specialist.py  verifier.py
.github/workflows/: ci.yml
scripts/: build_task_index.py
src/: agent.py  critic.py  executor.py  llm.py  planner.py  server.py  specialist.py  verifier.py
tests/: test_agent.py
